# open-football

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture.md  roadmap.md  setup.md
src/application/: Cargo.toml
src/application/src/: errors.rs  lib.rs
src/application/src/commands/: mod.rs  nation_commands.rs  player_commands.rs
src/application/src/repositories/: club_repo.rs  mod.rs  nation_repo.rs  player_repo.rs
src/application/src/use_cases/: mod.rs
src/application/src/use_cases/nation/: create_nation.rs  find_by_id_nation.rs  list_all_nations.rs  mod.rs
src/domain/: Cargo.toml
src/domain/src/: errors.rs  lib.rs
src/domain/src/entities/: club.rs  competition.rs  fixture.rs  mod.rs  nation.rs  player.rs  player_contract.rs  season.rs
src/domain/src/value_objects/: mod.rs  money.rs  reputation.rs
src/domain/src/value_objects/club/: abbreviation.rs  mod.rs  name.rs
src/domain/src/value_objects/competitions/: mod.rs  name.rs  rules.rs  standing.rs
src/domain/src/value_objects/fixture/: fixture_result.rs  mod.rs
src/domain/src/value_objects/nation/: name.rs
src/domain/src/value_objects/player/: ability.rs  attributes.rs  growth_potential.rs  mod.rs  name.rs  position.rs  weights.rs
src/engine/: Cargo.toml
src/infrastructure/: Cargo.toml
src/tauri/: .gitignore  index.html  package.json  pnpm-lock.yaml
src/tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/tauri/src-tauri/icons/: icon.icns
