[workspace]
resolver = "1"
members = ["src/application","src/domain", "src/engine", "src/infrastructure", "src/tauri/src-tauri"]

[workspace.dependencies]
rand = { version = "0.9.2" }
chrono = { version = "0.4.42" }
thiserror = { version = "2.0.17" }
derive_more = { version = "2.0.1" }
uuid = { version = "1.18.1", features = ["v4"] }
strum = { version = "0.27", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }

serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
