[package]
name = "tauri"
version = "0.1.0"
description = "Open-source football management simulator built in Rust."
authors = ["Victor Olimpio Vasconcelos <vvasconcelos.dev@gmail.com>"]
edition = "2021"

[lib]
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
